@@ -1,8 +1,10 @@
 package com.mycom.myapp.favorite.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.mycom.myapp.favorite.entity.Favorite;
 import com.mycom.myapp.favorite.repository.FavoriteRepository;
@@ -11,7 +13,6 @@ import com.mycom.myapp.movie.repository.MovieRepository;
 import com.mycom.myapp.user.entity.User;
 import com.mycom.myapp.user.repository.UserRepository;
 
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -31,13 +32,13 @@ public class FavoriteServiceImpl implements FavoriteService {
 
         // Movie 테이블에 없으면 Insert (캐싱용)
         Movie movie = movieRepository.findById(movieId).orElseGet(() ->
-                movieRepository.save(
-                    Movie.builder()
-                            .movieId(movieId)
-                            .title(title)
-                            .posterPath(posterPath)
-                            .build()
-                )
+            movieRepository.save(
+                Movie.builder()
+                        .movieId(movieId)
+                        .title(title)
+                        .posterPath(posterPath)
+                        .build()
+            )
         );
 
         // 중복 저장 방지
@@ -54,13 +55,30 @@ public class FavoriteServiceImpl implements FavoriteService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Movie> getFavorites(String email) {
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        return favoriteRepository.findByUser(user)
+        return favoriteRepository.findByUserWithMovie(user)
                 .stream()
                 .map(Favorite::getMovie)
-                .toList();
+                .collect(Collectors.toList());
     }
+    
+    
+    @Override
+    @Transactional
+    public void deleteFavorite(String email, Long movieId) {
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        Favorite favorite = favoriteRepository.findByUserAndMovie(
+                user,
+                movieRepository.findById(movieId).orElseThrow(() -> new RuntimeException("Movie not found"))
+        ).orElseThrow(() -> new RuntimeException("찜 정보가 존재하지 않습니다."));
+
+        favoriteRepository.delete(favorite);
+    }
+   
 }
